<!-- Copyright 2011 Google Inc. Licensed under the Apache License, Version 
	2.0 (the "License"); you may not use this file except in compliance with 
	the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<com.geozen.smarttrail.ui.widget.DashboardLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button android:id="@+id/home_btn_trails" style="@style/DashboardButton"
		android:text="@string/btn_trails" android:drawableTop="@drawable/home_btn_trails" />

	<Button android:id="@+id/home_btn_map" style="@style/DashboardButton"
		android:text="@string/btn_map" android:drawableTop="@drawable/home_btn_map" />

	<Button android:id="@+id/home_btn_starred" style="@style/DashboardButton"
		android:text="@string/btn_starred" android:drawableTop="@drawable/home_btn_starred" />

	<Button android:id="@+id/home_btn_announcements" style="@style/DashboardButton"
		android:text="@string/btn_alerts" android:drawableTop="@drawable/home_btn_alerts" />
		
	<Button android:id="@+id/home_btn_events" style="@style/DashboardButton"
		android:text="@string/btn_events" android:drawableTop="@drawable/home_btn_events" />
		
	<Button android:id="@+id/home_btn_patrol" style="@style/DashboardButton"
		android:text="@string/btn_patrol" android:drawableTop="@drawable/home_btn_patrol" />


</com.geozen.smarttrail.ui.widget.DashboardLayout>