
<com.geozen.smarttrail.ui.widget.DashboardLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_height="wrap_content">

		<ImageButton android:id="@+id/home_btn_trails"
			android:src="@drawable/home_btn_trails" style="@style/DashboardImage" />

		<TextView android:id="@+id/home_btn_trails_label"
			android:text="@string/btn_trails" android:layout_gravity="center"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			style="@style/DashboardText" />
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_height="wrap_content">

		<ImageButton android:id="@+id/home_btn_map" android:src="@drawable/home_btn_map"
			style="@style/DashboardImage" />

		<TextView android:id="@+id/home_btn_map_label" android:text="@string/btn_map"
			android:layout_gravity="center" android:layout_width="wrap_content"
			android:layout_height="wrap_content" style="@style/DashboardText" />
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_height="wrap_content">

		<ImageButton android:id="@+id/home_btn_starred"
			android:src="@drawable/home_btn_starred" style="@style/DashboardImage" />

		<TextView android:id="@+id/home_btn_starred_label"
			android:text="@string/btn_starred" android:layout_gravity="center"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			style="@style/DashboardText" />
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_height="wrap_content">

		<ImageButton android:id="@+id/home_btn_announcements"
			android:src="@drawable/home_btn_alerts" style="@style/DashboardImage" />

		<TextView android:id="@+id/home_btn_announcements_label"
			android:text="@string/btn_alerts" android:layout_gravity="center"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			style="@style/DashboardText" />
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_height="wrap_content">

		<ImageButton android:id="@+id/home_btn_events"
			android:src="@drawable/home_btn_events" style="@style/DashboardImage" />

		<TextView android:id="@+id/home_btn_events_label"
			android:text="@string/btn_events" android:layout_gravity="center"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			style="@style/DashboardText" />
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_height="wrap_content">

		<ImageButton android:id="@+id/home_btn_patrol"
			android:src="@drawable/home_btn_patrol" style="@style/DashboardImage" />

		<TextView android:id="@+id/home_btn_patrol_label"
			android:text="@string/btn_patrol" android:layout_gravity="center"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			style="@style/DashboardText" />
	</LinearLayout>
</com.geozen.smarttrail.ui.widget.DashboardLayout>
