<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical"
	android:layout_width="match_parent" android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">


	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:layout_weight="1">
		<LinearLayout android:orientation="vertical"
			android:layout_width="match_parent" android:layout_height="match_parent">

			<TextView android:id="@+id/title" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="Area Name" android:padding="10dp" />

			<View android:layout_width="match_parent" android:layout_height="1dp"
				android:background="?android:attr/listDivider" />
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="Rating:" android:paddingLeft="10dp" />
			<RatingBar android:id="@+id/rating" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:paddingLeft="10dp" android:stepSize="1"/>



			<View android:layout_width="match_parent" android:layout_height="1dp"
				android:background="?android:attr/listDivider" />



			<EditText android:id="@+id/review" android:layout_width="match_parent"
				android:hint="@string/reviewHint" android:imeOptions="actionDone"
				android:layout_height="300dp" android:gravity="top"
				android:layout_marginTop="5dp" android:layout_marginRight="10dp"
				android:layout_marginLeft="10dp" />

			<View android:layout_width="match_parent" android:layout_height="1dp"
				android:background="?android:attr/listDivider" />



		</LinearLayout>


	</ScrollView>

	<LinearLayout android:id="@+id/confirmCancel"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:gravity="bottom" android:orientation="horizontal">

		<Button android:text="@string/submit" android:id="@+id/confirm"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />

		<Button android:text="@string/cancel" android:id="@+id/cancel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />

	</LinearLayout>

</LinearLayout>




